Fix overflow width at not found page

--- a/client/src/styles/css/main.css
+++ b/client/src/styles/css/main.css
@@ -8,7 +8,7 @@
 }
 
 .notFound {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: grid;
   place-items: center;
