--- a/client/src/styles/scss/_notFound.scss
+++ b/client/src/styles/scss/_notFound.scss
@@ -1,5 +1,5 @@
 .notFound {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: grid;
   place-items: center;
